fix whitespace on register/login pages

--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -6,7 +6,11 @@
 
 
 body.login {
-	min-height: 100%;
+	height: auto;
+	#login{
+		padding: 0;
+		padding-top: 50px;
+	}
 	div{
 		h1 a{
 			background-image: url(/wp-content/themes/jomi/assets/img/logo.png);
